@@ -1,20 +1,0 @@
-language: python
-python: 3.8
-matrix:
-    include:
-        - python: "pypy3"
-          env: TOXENV=pypy3
-        - python: "3.6"
-          env: TOXENV=py36
-        - python: "3.7"
-          env: TOXENV=py37
-        - python: "3.8"
-          env: TOXENV=py38
-        - python: "3.8"
-          env: TOXENV=pep8
-        - python: "3.8"
-          env: TOXENV=coverage
-install:
-    - pip install tox
-script:
-    - tox -e $TOXENV
