@@ -5,17 +5,17 @@ class App(ChameleonApp):
     pass
 
 
-@App.path(path='persons/{name}')
-class Person(object):
+@App.path(path="persons/{name}")
+class Person:
     def __init__(self, name):
         self.name = name
 
 
 @App.template_directory()
 def get_template_dir():
-    return 'templates'
+    return "templates"
 
 
-@App.html(model=Person, template='person.pt')
+@App.html(model=Person, template="person.pt")
 def person_default(self, request):
-    return {'name': self.name}
+    return {"name": self.name}
